# engie_cc

powerplant-coding-challenge/: .env  Dockerfile  README.md  app.py  docker-compose.yml  pyproject.toml
powerplant-coding-challenge/api/: routes.py
powerplant-coding-challenge/api/v1/: routes.py
powerplant-coding-challenge/tests/: test_api.py
powerplant-coding-challenge/tests/test_data/: test_correct_payload.json
powerplant-coding-challenge/utils/: cost_utils.py  math_utils.py
